@@ -1,3 +1,7 @@
+s3cmd 0.9.9.92 -  ???
+==============
+* Added [accesslog] command. (needs manpage!)
+
 s3cmd 0.9.9.91 -  2009-10-08
 ==============
 * Fixed invalid reference to a variable in failed upload handling.
